# byaldi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml
byaldi/: RAGModel.py  __init__.py  colpali.py  indexing.py  objects.py  typedefs.py  utils.py
byaldi/integrations/: __init__.py  _langchain.py
examples/: chat_with_your_pdf.ipynb  example.ipynb  quick_overview.ipynb
tests/: all.py  test_colpali.py  test_colqwen.py  test_colsmolvlm.py  test_e2e_rag.py
